--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 .row {
   background-color: #856c8b;
   color: white;
-  padding: 10px;
+  padding: 20px;
 }
 
 h1 {
@@ -19,4 +19,7 @@ h2 {
   background-color: #856c8b;
   color: white;
   text-align: center;
+}
+marquee {
+  color: #856c8b;
 }
