--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body {
-  margin: 0px;
+  margin: 0;
   font-style: italic;
   font-weight: bold;
-  font-size-adjust: auto;
 }
 .row {
   background-color: #856c8b;
   color: white;
-  padding: 20px;
+  padding: 10px;
 }
 
 h1 {
