--- a/style.css
+++ b/style.css
@@ -1,24 +1,216 @@
-body {
-  margin: 0;
-  font-style: italic;
-  font-weight: bold;
+/* color stocks */
+:root {
+  --greenfromw3s: #4CAF50;
+  --matchboxcolorfromgetbootstrap: #7952b3;
+  --sienna: #a0522d;
+  --brown : 	#a52a2a;
+  --indianred: #cd5c5c;
+  --mediumvioletred: #c71585;
+  --palevioletred: #db7093;
+  --darkgreen: #006400;
+  --forestgreen: 	#228b22;
+  --chocolate : #d2691e;
+  --darkmagenta: #8b008b;
+  --dodgerblue: #1e90ff;
+  --royalblue: 	#4169e1;
+  --steelblue: 	#4682b4;
+  --mediumslateblue: #7b68ee;
+  --cornflowerblue : #6495ed;
+  --hotpink: 	#ff69b4;
+  --mediumorchid: #ba55d3;
+  --orchid: #da70d6;
+  --rebeccapurple: #663399;
+  --mediumpurple: 	#9370db;
+  --peru: #cd853f;
+  --goldenrod: #daa520;
+  --darksalmon: #e9967a;
+  --thistle: #d8bfd8;
+  --rosybrown: #bc8f8f;
+  --cornsilk : #fff8dc;
+  --slategrey: #708090;
+  --whitesmoke: #f5f5f5;
+  --tan: #D2B48C;
+  --saddlebrown: #8B4513;
+  --seashell: #FFF5EE;
+  --rosybrown: #BC8F8F;
+  --ghostwhite: #F8F8FF;
+  --floralwhite: #F8F8FF;
+  --gainsboro: #DCDCDC;
+  --lightgrey: #D3D3D3;
+  --teal: #008080;
+  --white: #FFFFFF;
+  --black: #000000;
+  --dimgray: #696969;
+  --gray: #808080;
+  --darkgrey: #a9a9a9;
+  --silver: #C0C0C0;
 }
-.row {
-  background-color: #856c8b;
-  color: white;
-  padding: 10px;
+/* end of colors stock */
+/* font header */
+/* header */
+.header {
+  clip-path: polygon(0 0, 100% 0, 100% 95%, 50% 100%, 0 95%);
+  color: var(--white);
+  overflow: hidden;
+}
+.height-max {
+  min-height: calc(100vh - 76px);
+  background: url("FrontOffice Background1017x650jpg.jpg")center/cover no-repeat fixed;
+  animation-name: zoom;
+  animation-duration: 20s;
+  animation-delay: 5s;
+  animation-iteration-count: infinite;
+}
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2) translateX(-5%);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
-h1 {
-  background-color: #856c8b;
-  color: white;
-  text-align: center;
-  }
-h2 {
-  background-color: #856c8b;
-  color: white;
-  text-align: center;
+
+.title-heading {
+  background: rgba(0, 0, 0, 0.4);
+  border-left: 0.3rem solid var(--dodgerblue);
 }
-marquee {
-  color: #856c8b;
+.title {
+  font-weight: 700;
+  font-size: 1.9rem;
+}
+@media screen and (min-width:768px) {
+  .title {
+    font-size: 3rem;
+  }
+}
+.title-icon {
+  color: var(--dodgerblue);
+  text-decoration: none !important;
+}
+.title-icon:hover {
+  color: var(--dodgerblue);
+  opacity: 0.6;
+}
+
+/* end of front header */
+
+
+.bg-color1 {
+  background: var(--rebeccapurple);
+}
+.bg-color2 {
+  background: var(--rebeccapurple);
+}
+.bg-color3 {
+  background: var(--rebeccapurple);
+}
+.height-80 {
+  min-height: calc(100vh-545px);
+}
+
+/* page1 */
+.store {
+  background: var(--slategrey);
+}
+
+.single-item {
+  transition: all 0.3 linear;
+}
+.single-item:hover {
+  box-shadow: 0 10px 15px rgba(0, 0, 0);
+}
+.img-container {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+.store-img {
+  transition: all 1s ease-in-out;
+}
+.img-container:hover .store-img {
+  transform: scale(1.2);
+}
+.store-item-icon {
+  position:absolute;
+  bottom: 0;
+  right: 0;
+  padding: 0.75rem;
+  background: var(--greenfromw3s);
+  border-top-left-radius: 1rem;
+  transition: all 1s ease-in-out;
+  transform: translate(100%, 100%);
+}
+.img-container:hover .store-item-icon {
+  transform: translate(0, 0);
+}
+.store-item-icon:hover {
+  color: white;
+}
+/* end of page1 */
+
+/* gallery section */
+.gallery-btn:hover {
+  background: var(--greenfromw3s);
+  color: var(--white);
+}
+.gallery-img-container {
+  position: relative;
+  transition: all 1s linear;
+  overflow: hidden;
+}
+.gallery-img-container:hover {
+  background: var(--white);
+  color: var(--white);
+}
+.gallery-img {
+  transition: all 1s linear;
+}
+.gallery-img-container:hover .gallery-img {
+  opacity: 0.3;
+}
+.gallery-info {
+  position:absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 100%);
+  background: var(--goldenrod);
+  color: var(--white);
+  text-decoration: none;
+  transition: all 0.3s linear;
+}
+.gallery-info:hover {
+  text-decoration: none;
+  color: var(--black);
+}
+.gallery-img-container:hover .gallery-info {
+  transform: translate(-50%, 0);
+}
+.gallery-icon {
+  position: absolute;
+  color: var(--white);
+  top: 50%;
+  left: 50%;
+  font-size: 2rem;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.3s linear;
+  cursor: pointer;
+}
+.gallery-img-container:hover .gallery-icon {
+  opacity: 1;
+}
+.gallery-btn:hover {
+  background: var(--sienna);
+  color: var(--white);
+}
+.bg-color {
+  background: var(--white);
+  color: var(--sienna);
+}
+.decoration {
+  text-decoration: none!important;
 }
