--- a/style.css
+++ b/style.css
@@ -46,171 +46,6 @@
   --silver: #C0C0C0;
 }
 /* end of colors stock */
-/* font header */
-/* header */
-.header {
-  clip-path: polygon(0 0, 100% 0, 100% 95%, 50% 100%, 0 95%);
-  color: var(--white);
-  overflow: hidden;
-}
-.height-max {
-  min-height: calc(100vh - 76px);
-  background: url("FrontOffice Background1017x650jpg.jpg")center/cover no-repeat fixed;
-  animation-name: zoom;
-  animation-duration: 20s;
-  animation-delay: 5s;
-  animation-iteration-count: infinite;
-}
-@keyframes zoom {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.2) translateX(-5%);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-
-.title-heading {
-  background: rgba(0, 0, 0, 0.4);
-  border-left: 0.3rem solid var(--dodgerblue);
-}
-.title {
-  font-weight: 700;
-  font-size: 1.9rem;
-}
-@media screen and (min-width:768px) {
-  .title {
-    font-size: 3rem;
-  }
-}
-.title-icon {
-  color: var(--dodgerblue);
-  text-decoration: none !important;
-}
-.title-icon:hover {
-  color: var(--dodgerblue);
-  opacity: 0.6;
-}
-
-/* end of front header */
-
-
-.bg-color1 {
-  background: var(--rebeccapurple);
-}
-.bg-color2 {
-  background: var(--rebeccapurple);
-}
-.bg-color3 {
-  background: var(--rebeccapurple);
-}
-.height-80 {
-  min-height: calc(100vh-545px);
-}
-
-/* page1 */
-.store {
-  background: var(--slategrey);
-}
-
-.single-item {
-  transition: all 0.3 linear;
-}
-.single-item:hover {
-  box-shadow: 0 10px 15px rgba(0, 0, 0);
-}
-.img-container {
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-}
-.store-img {
-  transition: all 1s ease-in-out;
-}
-.img-container:hover .store-img {
-  transform: scale(1.2);
-}
-.store-item-icon {
-  position:absolute;
-  bottom: 0;
-  right: 0;
-  padding: 0.75rem;
-  background: var(--greenfromw3s);
-  border-top-left-radius: 1rem;
-  transition: all 1s ease-in-out;
-  transform: translate(100%, 100%);
-}
-.img-container:hover .store-item-icon {
-  transform: translate(0, 0);
-}
-.store-item-icon:hover {
-  color: white;
-}
-/* end of page1 */
-
-/* gallery section */
-.gallery-btn:hover {
-  background: var(--greenfromw3s);
-  color: var(--white);
-}
-.gallery-img-container {
-  position: relative;
-  transition: all 1s linear;
-  overflow: hidden;
-}
-.gallery-img-container:hover {
-  background: var(--white);
-  color: var(--white);
-}
-.gallery-img {
-  transition: all 1s linear;
-}
-.gallery-img-container:hover .gallery-img {
-  opacity: 0.3;
-}
-.gallery-info {
-  position:absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 100%);
-  background: var(--goldenrod);
-  color: var(--white);
-  text-decoration: none;
-  transition: all 0.3s linear;
-}
-.gallery-info:hover {
-  text-decoration: none;
-  color: var(--black);
-}
-.gallery-img-container:hover .gallery-info {
-  transform: translate(-50%, 0);
-}
-.gallery-icon {
-  position: absolute;
-  color: var(--white);
-  top: 50%;
-  left: 50%;
-  font-size: 2rem;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: all 0.3s linear;
-  cursor: pointer;
-}
-.gallery-img-container:hover .gallery-icon {
-  opacity: 1;
-}
-.gallery-btn:hover {
-  background: var(--sienna);
-  color: var(--white);
-}
-.bg-color {
-  background: var(--white);
-  color: var(--sienna);
-}
-.decoration {
-  text-decoration: none!important;
+body {
+  color: var(--teal) !important;
 }
